feat: add newsletter, profile, signup, and user management pages with responsive design
- Created newsletter.html for newsletter subscription with form validation.
- Developed perfil.html for user profile management including post listings.
- Implemented signup.html for user account creation with validation.
- Added usuarios.html for user management with a table for user actions.
- Established styles.css with a comprehensive mobile-first design and accessibility features.

--- a/src/admin.html
+++ b/src/admin.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Categorias - HABITAT</title>
+  <meta name="description" content="Painel administrativo do HABIT - Gerencie posts, categorias, usuários e configurações do site." />
+  <title>Admin Dashboard - HABITAT</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -15,14 +16,14 @@
 
   <header class="site-header">
     <div class="container inner">
-      <div class="brand">HABITAT</div>
+      <div class="brand">HABIT</div>
       <nav class="primary-nav" aria-label="Navegação principal">
         <ul>
           <li><a href="index.html">Início</a></li>
-          <li><a href="navegacao.html">Páginas</a></li>
+          <li><span style="pointer-events: none; cursor: default;">Páginas</span></li>
           <li><a href="destaques.html">Destaques</a></li>
           <li><a href="newsletter.html">Assinar</a></li>
-          <li><a href="admin.html">Admin</a></li>
+          <li><a href="admin.html" aria-current="page">Admin</a></li>
         </ul>
       </nav>
       <div class="header-actions">
@@ -38,7 +39,7 @@
       <aside class="admin-sidebar">
         <h2>Menu</h2>
         <ul class="admin-menu">
-          <li><a href="categorias.html" aria-current="page">Categorias</a></li>
+          <li><a href="categorias.html">Categorias</a></li>
           <li><a href="criar-post.html">Criar Post</a></li>
           <li><a href="escolhas-editor.html">Escolhas do Editor</a></li>
           <li><a href="usuarios.html">Usuários</a></li>
@@ -66,71 +67,23 @@
             <div class="metric-value">7</div>
           </div>
         </div>
-
-        <section class="section">
-          <h2>Categorias</h2>
-          <input type="search" placeholder="Buscar categorias..." aria-label="Buscar categorias" style="margin-bottom: var(--space-lg)" />
-
-          <div class="surface">
-            <h3>Categoria</h3>
-            <table class="data-table">
-              <tbody>
-                <tr>
-                  <td>Categoria #1</td>
-                  <td>
-                    <a class="btn btn--outline" href="#" style="margin-right: var(--space-sm)">Editar</a>
-                    <a class="btn btn--outline" href="#">Excluir</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>Categoria #2</td>
-                  <td>
-                    <a class="btn btn--outline" href="#" style="margin-right: var(--space-sm)">Editar</a>
-                    <a class="btn btn--outline" href="#">Excluir</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>Categoria #3</td>
-                  <td>
-                    <a class="btn btn--outline" href="#" style="margin-right: var(--space-sm)">Editar</a>
-                    <a class="btn btn--outline" href="#">Excluir</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>Categoria #4</td>
-                  <td>
-                    <a class="btn btn--outline" href="#" style="margin-right: var(--space-sm)">Editar</a>
-                    <a class="btn btn--outline" href="#">Excluir</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>Categoria #5</td>
-                  <td>
-                    <a class="btn btn--outline" href="#" style="margin-right: var(--space-sm)">Editar</a>
-                    <a class="btn btn--outline" href="#">Excluir</a>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </section>
       </div>
     </div>
 
-    <section class="section">
-      <div class="chips">
-        <span class="chip">Instagram</span>
-        <span class="chip">Work</span>
-        <span class="chip">Bags</span>
-        <span class="chip">Lamp</span>
-        <span class="chip">Books</span>
-      </div>
-    </section>
   </main>
 
   <footer class="site-footer">
     <div class="container">
-      <small>© 2025 Meu Site • Meu site</small>
+      <div class="footer-content">
+        <div class="footer-chips">
+          <span class="footer-chip">Instagram</span>
+          <span class="footer-chip">Work</span>
+          <span class="footer-chip">Bags</span>
+          <span class="footer-chip">Lamp</span>
+          <span class="footer-chip">Books</span>
+        </div>
+        <small>© 2025 Meu Site • Meu site</small>
+      </div>
     </div>
   </footer>
 </body>
