--- a/src/perfil.html
+++ b/src/perfil.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Seu perfil no HABIT - Gerencie suas informações pessoais e preferências de conta." />
   <title>Perfil - HABITAT</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,11 +16,11 @@
 
   <header class="site-header">
     <div class="container inner">
-      <div class="brand">HABITAT</div>
+      <div class="brand">HABIT</div>
       <nav class="primary-nav" aria-label="Navegação principal">
         <ul>
           <li><a href="index.html">Início</a></li>
-          <li><a href="navegacao.html">Páginas</a></li>
+          <li><span style="pointer-events: none; cursor: default;">Páginas</span></li>
           <li><a href="destaques.html">Destaques</a></li>
           <li><a href="newsletter.html">Assinar</a></li>
           <li><a href="admin.html">Admin</a></li>
@@ -86,20 +87,20 @@
       </div>
     </div>
 
-    <section class="section">
-      <div class="chips">
-        <span class="chip">Instagram</span>
-        <span class="chip">Work</span>
-        <span class="chip">Bags</span>
-        <span class="chip">Lamp</span>
-        <span class="chip">Books</span>
-      </div>
-    </section>
   </main>
 
   <footer class="site-footer">
     <div class="container">
-      <small>© 2025 Meu Site • Meu site</small>
+      <div class="footer-content">
+        <div class="footer-chips">
+          <span class="footer-chip">Instagram</span>
+          <span class="footer-chip">Work</span>
+          <span class="footer-chip">Bags</span>
+          <span class="footer-chip">Lamp</span>
+          <span class="footer-chip">Books</span>
+        </div>
+        <small>© 2025 Meu Site • Meu site</small>
+      </div>
     </div>
   </footer>
 </body>
