--- a/src/signup.html
+++ b/src/signup.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Assine a newsletter - HABITAT</title>
+  <meta name="description" content="Crie sua conta no HABIT e tenha acesso a conteúdos exclusivos sobre trabalho, tecnologia, lifestyle e muito mais." />
+  <title>Criar Conta - HABITAT</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -15,13 +16,13 @@
 
   <header class="site-header">
     <div class="container inner">
-      <div class="brand">HABITAT</div>
+      <div class="brand">HABIT</div>
       <nav class="primary-nav" aria-label="Navegação principal">
         <ul>
           <li><a href="index.html">Início</a></li>
-          <li><a href="navegacao.html">Páginas</a></li>
+          <li><span style="pointer-events: none; cursor: default;">Páginas</span></li>
           <li><a href="destaques.html">Destaques</a></li>
-          <li><a href="newsletter.html" aria-current="page">Assinar</a></li>
+          <li><a href="newsletter.html">Assinar</a></li>
           <li><a href="admin.html">Admin</a></li>
         </ul>
       </nav>
@@ -35,34 +36,46 @@
 
   <main id="conteudo" class="container section">
     <div class="form-container">
-      <h1>Assine a newsletter</h1>
+      <h1>Criar Conta</h1>
       <form>
+        <div class="form-group">
+          <label for="nome">Nome completo</label>
+          <input type="text" id="nome" name="nome" required />
+        </div>
         <div class="form-group">
           <label for="email">E-mail</label>
           <input type="email" id="email" name="email" required />
         </div>
+        <div class="form-group">
+          <label for="senha">Senha</label>
+          <input type="password" id="senha" name="senha" required />
+        </div>
+        <div class="form-group">
+          <label for="confirmar-senha">Confirmar senha</label>
+          <input type="password" id="confirmar-senha" name="confirmar-senha" required />
+        </div>
         <div class="checkbox-group">
           <input type="checkbox" id="termos" name="termos" required />
-          <label for="termos">Concordo em receber comunicações e li a política de privacidade.</label>
+          <label for="termos">Concordo com os termos e a política de privacidade</label>
         </div>
-        <button type="submit" class="btn btn--primary" style="width: 100%;">Assinar</button>
+        <button type="submit" class="btn btn--primary" style="width: 100%;">Cadastrar</button>
       </form>
     </div>
 
-    <section class="section">
-      <div class="chips">
-        <span class="chip">Instagram</span>
-        <span class="chip">Work</span>
-        <span class="chip">Bags</span>
-        <span class="chip">Lamp</span>
-        <span class="chip">Books</span>
-      </div>
-    </section>
   </main>
 
   <footer class="site-footer">
     <div class="container">
-      <small>© 2025 Meu Site • Meu site</small>
+      <div class="footer-content">
+        <div class="footer-chips">
+          <span class="footer-chip">Instagram</span>
+          <span class="footer-chip">Work</span>
+          <span class="footer-chip">Bags</span>
+          <span class="footer-chip">Lamp</span>
+          <span class="footer-chip">Books</span>
+        </div>
+        <small>© 2025 Meu Site • Meu site</small>
+      </div>
     </div>
   </footer>
 </body>
