--- a/src/criar-post.html
+++ b/src/criar-post.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Admin Dashboard - HABITAT</title>
+  <meta name="description" content="Crie novos posts para o HABIT - Editor de conteúdo com suporte a categorias, tags e imagens." />
+  <title>Criar Post - HABITAT</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -15,14 +16,14 @@
 
   <header class="site-header">
     <div class="container inner">
-      <div class="brand">HABITAT</div>
+      <div class="brand">HABIT</div>
       <nav class="primary-nav" aria-label="Navegação principal">
         <ul>
           <li><a href="index.html">Início</a></li>
-          <li><a href="navegacao.html">Páginas</a></li>
+          <li><span style="pointer-events: none; cursor: default;">Páginas</span></li>
           <li><a href="destaques.html">Destaques</a></li>
           <li><a href="newsletter.html">Assinar</a></li>
-          <li><a href="admin.html" aria-current="page">Admin</a></li>
+          <li><a href="admin.html">Admin</a></li>
         </ul>
       </nav>
       <div class="header-actions">
@@ -39,7 +40,7 @@
         <h2>Menu</h2>
         <ul class="admin-menu">
           <li><a href="categorias.html">Categorias</a></li>
-          <li><a href="criar-post.html">Criar Post</a></li>
+          <li><a href="criar-post.html" aria-current="page">Criar Post</a></li>
           <li><a href="escolhas-editor.html">Escolhas do Editor</a></li>
           <li><a href="usuarios.html">Usuários</a></li>
           <li><a href="fila-revisao.html">Fila de revisão</a></li>
@@ -66,23 +67,48 @@
             <div class="metric-value">7</div>
           </div>
         </div>
+
+        <section class="section">
+          <h2>Criar Post</h2>
+          <div class="surface">
+            <form>
+              <div class="form-group">
+                <label for="titulo">Título</label>
+                <input type="text" id="titulo" name="titulo" />
+              </div>
+              <div class="form-group">
+                <label for="conteudo">Conteúdo</label>
+                <textarea id="conteudo" name="conteudo" rows="10" placeholder="Escreva aqui... (editor simulado)"></textarea>
+              </div>
+              <div class="form-grid">
+                <input type="text" placeholder="Categorias e tags" />
+                <input type="text" placeholder="Upload da imagem de capa" />
+              </div>
+              <div class="cluster">
+                <button type="button" class="btn btn--outline">Salvar rascunho</button>
+                <button type="button" class="btn btn--outline">Enviar para revisão</button>
+                <button type="submit" class="btn btn--primary">Publicar (admin)</button>
+              </div>
+            </form>
+          </div>
+        </section>
       </div>
     </div>
 
-    <section class="section">
-      <div class="chips">
-        <span class="chip">Instagram</span>
-        <span class="chip">Work</span>
-        <span class="chip">Bags</span>
-        <span class="chip">Lamp</span>
-        <span class="chip">Books</span>
-      </div>
-    </section>
   </main>
 
   <footer class="site-footer">
     <div class="container">
-      <small>© 2025 Meu Site • Meu site</small>
+      <div class="footer-content">
+        <div class="footer-chips">
+          <span class="footer-chip">Instagram</span>
+          <span class="footer-chip">Work</span>
+          <span class="footer-chip">Bags</span>
+          <span class="footer-chip">Lamp</span>
+          <span class="footer-chip">Books</span>
+        </div>
+        <small>© 2025 Meu Site • Meu site</small>
+      </div>
     </div>
   </footer>
 </body>
